--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/Level1.Level1
 EditorStartupMap=/Game/Levels/Level1.Level1
+GlobalDefaultGameMode=/Game/Blueprints/Gamemode/RogueGamemode.RogueGamemode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
