--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -273,6 +273,7 @@ ManualIPAddress=
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Player")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Overlap,bTraceType=False,bStaticObject=False,Name="Projectile")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="Weapon")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="CustomCamera")
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
@@ -293,4 +294,5 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="Channel",NewName="Custom")
 +CollisionChannelRedirects=(OldName="Custom",NewName="Player")
++CollisionChannelRedirects=(OldName="Camera",NewName="CustomCamera")
 
