--- a/capstone.uproject
+++ b/capstone.uproject
@@ -14,6 +14,10 @@
 		{
 			"Name": "CascadeToNiagaraConverter",
 			"Enabled": true
+		},
+		{
+			"Name": "Landmass",
+			"Enabled": true
 		}
 	]
 }
