Added character customization, save game, portal to go to next level, custom skies, and continued bug fixes/improvements

--- a/capstone.uproject
+++ b/capstone.uproject
@@ -16,8 +16,12 @@
 			"Enabled": true
 		},
 		{
-			"Name": "Landmass",
+			"Name": "BlueprintColorPicker",
 			"Enabled": true
+		},
+		{
+			"Name": "BlueprintColorPickerCustom",
+			"Enabled": false
 		}
 	]
 }
